# Trabalho-Data-Mining

./: Base Dados Data Mining CSV.csv  Base Dados Original.xlsx  Baseofertaspreparada.csv  OfertasPublicasPreparadaData2.csv  README.md  app.py  base_dados_preparada.csv  pyproject.toml
